--- a/src/main/webapp/calculadora.xhtml
+++ b/src/main/webapp/calculadora.xhtml
@@ -20,7 +20,7 @@
             <p:commandButton value="Calcular Moda" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateMode(input.value)}"/>
             <p:outputLabel value="#{calculatorBB.standardDev}"/>
-            <p:commandButton value="Calcular desciavion Estandar" update="calculadora_form"
+            <p:commandButton value="Calcular desviación Estandar" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateStandardDeviation(input.value)}"/>
             <p:outputLabel value="#{calculatorBB.variance}"/>
             <p:commandButton value="Calcular varianza" update="calculadora_form"
