--- a/src/main/webapp/calculadora.xhtml
+++ b/src/main/webapp/calculadora.xhtml
@@ -65,7 +65,7 @@
                              actionListener="#{calculatorBB.calculateMode(input.value)}"
                              style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px;"/>
             <p:outputLabel class="output" value="#{calculatorBB.standardDev}"/>
-            <p:commandButton value="Calcular desciavion Estandar" update="calculadora_form"
+            <p:commandButton value="Calcular desviación Estandar" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateStandardDeviation(input.value)}"
                              style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px;"/>
             <p:outputLabel class="output" value="#{calculatorBB.variance}"/>
