--- a/src/main/webapp/calculadora.xhtml
+++ b/src/main/webapp/calculadora.xhtml
@@ -5,23 +5,32 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
     <style type="text/css">
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&amp;family=Righteous');
+        * {
+            font-family: 'Fredoka', sans-serif;
+            font-family: 'Righteous', cursive;
+        }
         h1 {
-            color: maroon;
+            color: white;
+            text-shadow: 0 0 2px black;
         }
         body {
-            backdrop-filter: blur(5px);
+            min-height: 100vh;
+            backdrop-filter: blur(3px);
             background-image: url("https://media.discordapp.net/attachments/817051913760538674/950945629637574706/composition-book-cover-seamless-pattern-vector-id951797646.png");
-            border-radius: 5px;
-            border-color: black;
-            border: 3px solid black;
+            box-sizing: border-box;
         }
-        .center {
+        .form {
             margin: auto;
+            top: 50%;
             width: 50%;
-            border: 3px solid green;
-            border-radius: 6px;
+            -ms-transform: translateY(50%);
+            transform: translateY(50%);
+            border: 5px solid black;
+            border-radius: 20px;
             padding: 10px;
             background-color: #c3ccd3;
+            padding: 20px;
         }
         .buttonP .ui-button {
             background: red;
@@ -36,26 +45,27 @@
             display: flex;
         }
         table {
-            // border: 2px solid red;
             width: 100%;
         }
-        * {
-            font-family: Arial, Helvetica, sans-serif;
+        .inputS {
+            width: 50%;
+            margin: auto;
+            margin-bottom: 10px;
         }
         </style>
 </h:head>
 <h:body>
-    <h:form id="calculadora_form" class="center">
+    <h:form id="calculadora_form" class="form">
         <h1>
             Calculadora
         </h1>
-        <h:panelGrid style="width: 50%; margin: auto; margin-bottom: 10px;" columns="3">
+        <h:panelGrid class="inputS" columns="3">
             <p:outputLabel value="Datos" style="display: none;"/>
             <p:inputText type="text" binding="#{input}"/>
-            <p:commandButton value="enviar" update="calculadora_form"
+            <p:commandButton value="Enviar" update="calculadora_form"
                              actionListener="#{calculatorBB.setNumbers(input.value)}"/>
         </h:panelGrid>
-        <h:panelGrid columns="2" style="margin-right: 0px;">
+        <h:panelGrid columns="2">
             <p:outputLabel class="output" value="#{calculatorBB.mean}"/>
             <p:commandButton value="Calcular Media" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateMean(input.value)}" 
