--- a/src/main/webapp/calculadora.xhtml
+++ b/src/main/webapp/calculadora.xhtml
@@ -7,17 +7,15 @@
     <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&amp;family=Orbitron:wght@700;800;900&amp;family=Righteous&amp;display=swap');
         * {
-            font-family: 'Fredoka', sans-serif;
             font-family: 'Orbitron', sans-serif;
-            font-family: 'Righteous', cursive;
         }
         h1 {
+            font-size: 250%;
             color: white;
-            text-shadow: 0 0 7px rgb(74, 209, 184);
+            text-shadow: 0 0 20px rgb(74, 209, 184);
         }
         body {
             min-height: 100vh;
-            backdrop-filter: blur(3px);
             background-image: url("https://c.tenor.com/RWJlrcyxAvgAAAAC/makiplays-retrowave.gif"); 
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -30,20 +28,19 @@
             width: 50%;
             -ms-transform: translateY(50%);
             transform: translateY(50%);
-            background: rgb(250,92,193);
-            background: linear-gradient(90deg, rgba(250,92,193,1) 0%, rgba(87,254,224,1) 50%, rgba(252,191,26,1) 100%);
+            backdrop-filter: blur(3px);
             border-radius: 20px;
-            border: 6px solid linear-gradient(90deg, rgb(110, 250, 92) 0%, rgb(254, 93, 87) 50%, rgb(26, 41, 252) 100%);
-            padding: 10px;
             padding: 20px;
         }
         .output {
-            background-color: white;
+            background-color: rgb(206, 255, 204);
             padding: 5px;
             border-radius: 6px;
             border: 2px solid rgb(79, 173, 67);
             display: flex;
             box-shadow: 0 0 7px rgb(74, 209, 97);
+            font-family: 'Orbitron', sans-serif;
+            text-shadow: 0 0 7px white;
         }
         table {
             width: 100%;
@@ -51,19 +48,45 @@
         .inputS{
             width: 350px;
             padding-left: 0px;
-            margin: unset;
             border-radius: 6px;
-            box-shadow: 0 0 7px rgb(74, 209, 97);
+            border: 2px solid rgb(79, 173, 67);
+            box-shadow: 0 0 10px rgb(74, 209, 97);
         }
         .outputS {
             width: 50%;
             margin: auto;
             margin-bottom: 10px;
         }
+        .glowing::before{
+            content: '';
+            position: absolute;
+            border-radius: 20px;
+            left: -2px;
+            top: -2px;
+            background: linear-gradient(45deg, #e8f74d, #ff6600d9, #00ff66, #13ff13, #ad27ad, #bd2681, #6512b9, #ff3300de, #5aabde);
+            background-size: 400%;
+            width: calc(100% + 5px);
+            height: calc(100% + 5px);
+            z-index: -1;
+            animation: glower 20s linear infinite;
+        }
+        @keyframes glower {
+        0% {
+            background-position: 0 0;
+        }
+        
+        50% {
+            background-position: 400% 0;
+        }
+        
+        100% {
+            background-position: 0 0;
+        }
+        }
         </style>
 </h:head>
 <h:body>
-    <h:form id="calculadora_form" class="form">
+    <h:form id="calculadora_form" class="form glowing">
         <h1>
             Calculadora
         </h1>
@@ -71,27 +94,27 @@
             <p:outputLabel value="Datos" style="display: none;"/>
             <p:inputText class="inputS" type="text" binding="#{input}"/>
             <p:commandButton value="Enviar" update="calculadora_form"
-                             actionListener="#{calculatorBB.setNumbers(input.value)}" style="border: 3px solid #17598f; border-radius: 6px; box-shadow: 0 0 7px rgb(82, 96, 228);"/>
+                             actionListener="#{calculatorBB.setNumbers(input.value)}" style="border: 3px solid #17598f; border-radius: 6px; box-shadow: 0 0 7px rgb(82, 96, 228); text-shadow: 0 0 7px white;"/>
         </h:panelGrid>
         <h:panelGrid columns="2">
             <p:outputLabel class="output" value="#{calculatorBB.mean}"/>
             <p:commandButton value="Calcular Media" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateMean(input.value)}" 
-                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228);"/>
+                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228); text-shadow: 0 0 7px white;"/>
             <p:outputLabel class="output" value="#{calculatorBB.mode}"/>
             <p:commandButton styleClass="buttonP" value="Calcular Moda" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateMode(input.value)}"
-                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228);"/>
+                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228); text-shadow: 0 0 7px white;"/>
             <p:outputLabel class="output" value="#{calculatorBB.standardDev}"/>
             <p:commandButton value="Calcular desviación Estandar" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateStandardDeviation(input.value)}"
-                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228);"/>
+                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228); text-shadow: 0 0 7px white;"/>
             <p:outputLabel class="output" value="#{calculatorBB.variance}"/>
             <p:commandButton value="Calcular varianza" update="calculadora_form"
                              actionListener="#{calculatorBB.calculateVariance(input.value)}"
-                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228);"/>
+                             style="background: #2196F3; border: 3px solid #17598f; border-radius: 6px; float: right; margin-right: 0px; box-shadow: 0 0 7px rgb(82, 96, 228); text-shadow: 0 0 7px white;"/>
             <p:commandButton value="Restart" update="calculadora_form" actionListener="#{calculatorBB.restart}"
-                             style="background: rgb(79, 173, 67); border: 3px solid rgb(27, 185, 48); border-radius: 6px; box-shadow: rgb(74, 209, 97);"/>
+                             style="background: rgb(79, 173, 67); border: 3px solid rgb(27, 185, 48); border-radius: 6px; box-shadow: rgb(74, 209, 97); text-shadow: 0 0 7px white;"/>
         </h:panelGrid>
             <ui:repeat var="item" varStatus="status" value="#{calculatorBB.numSubmited}">
                 <h:panelGrid columns="1">
